# Data_structures_and_algorithms_C

./: CMakeLists.txt  README.md
Data_Structures/: README.md
Data_Structures/1-Linked_Lists/: linked_lists.c  test.c
Data_Structures/1-Linked_Lists/1.1-Singly_Linked_Lists/: README.md
Recursion/: Factorial_of_a_number.c  README.md  nth_number_Fibonacci.c
Shell_Project/: README.md  Untitled Diagram.drawio
Shell_Project/v1/: README.md  eshell  execmd.c  get_location.c  main.c  main.h  main.h.gch
Strings/: 1  1-memchr.c  1-test.c  2-memcmp.c  2-test.c  3-memcpy.c  3-test.c  4-memmove.c  4-test.c  5-memset.c  5-test.c  8-strchr.c  8-test.c  README.md  mystring.h  mystring.h.gch
printf_project/: README.md
printf_project/implementation_3/: README.md  conversion_specifier.c
